--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,4 +14,6 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Gradle
-        run: ./gradlew build test
+        run: 
+          chmod +x ./gradlew 
+          ./gradlew build test
