--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -145,17 +145,17 @@ jobs:
           cat fixed-changelog.md >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
 
-      - name: Create ATLauncher Version
-        uses: ATLauncher/release-atlauncher-action@master
-        timeout-minutes: 30
-        with:
-          api-key: ${{ secrets.ATLAUNCHER_API_KEY }}
-          version: ${{ needs.build.outputs.clean-version }}
-          changelog: ${{ env.cleaned-changelog }}
-          files: |
-            ./ATLauncher/ATLauncher-${{ needs.build.outputs.clean-version }}.exe
-            ./ATLauncher/ATLauncher-${{ needs.build.outputs.clean-version }}.zip
-            ./ATLauncher/ATLauncher-${{ needs.build.outputs.clean-version }}.jar
+    #   - name: Create ATLauncher Version
+    #     uses: ATLauncher/release-atlauncher-action@master
+    #     timeout-minutes: 30
+    #     with:
+    #       api-key: ${{ secrets.ATLAUNCHER_API_KEY }}
+    #       version: ${{ needs.build.outputs.clean-version }}
+    #       changelog: ${{ env.cleaned-changelog }}
+    #       files: |
+    #         ./ATLauncher/ATLauncher-${{ needs.build.outputs.clean-version }}.exe
+    #         ./ATLauncher/ATLauncher-${{ needs.build.outputs.clean-version }}.zip
+    #         ./ATLauncher/ATLauncher-${{ needs.build.outputs.clean-version }}.jar
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
@@ -172,22 +172,22 @@ jobs:
             ./ATLauncher/ATLauncher-${{ needs.build.outputs.clean-version }}.zip
             ./ATLauncher/ATLauncher-${{ needs.build.outputs.clean-version }}.jar
 
-      - name: Create Sentry release
-        uses: getsentry/action-release@v1
-        env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
-          SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
-        with:
-          environment: production
-          version: "${{ needs.build.outputs.clean-version }}"
+    #   - name: Create Sentry release
+    #     uses: getsentry/action-release@v1
+    #     env:
+    #       SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+    #       SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+    #       SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
+    #     with:
+    #       environment: production
+    #       version: "${{ needs.build.outputs.clean-version }}"
 
-      - name: Package up AUR versions
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.BOT_GITHUB_TOKEN }}
-          event-type: aur-publish
-          client-payload: '{"version": "${{ needs.build.outputs.clean-version }}"}'
+    #   - name: Package up AUR versions
+    #     uses: peter-evans/repository-dispatch@v1
+    #     with:
+    #       token: ${{ secrets.BOT_GITHUB_TOKEN }}
+    #       event-type: aur-publish
+    #       client-payload: '{"version": "${{ needs.build.outputs.clean-version }}"}'
 
       - name: Update version
         run: |
@@ -214,9 +214,9 @@ jobs:
           add: 'CHANGELOG.md src/main/resources/version'
           message: 'chore: bump version'
 
-      - name: Add comment, remove label and then close issues labeled with 'awaiting-release'
-        uses: ./.github/actions/label-cleanup
-        with:
-          label: 'awaiting-release'
-          comment: 'This has been fixed with version ${{ needs.build.outputs.clean-version }}'
-          token: ${{ secrets.BOT_GITHUB_TOKEN }}
+    #   - name: Add comment, remove label and then close issues labeled with 'awaiting-release'
+    #     uses: ./.github/actions/label-cleanup
+    #     with:
+    #       label: 'awaiting-release'
+    #       comment: 'This has been fixed with version ${{ needs.build.outputs.clean-version }}'
+    #       token: ${{ secrets.BOT_GITHUB_TOKEN }}
