--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -90,7 +90,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [test, build]
-    if: ${{ github.ref == 'refs/heads/master' || !endsWith(needs.build.outputs.version, '.Beta') }}
+    if: ${{ github.ref == 'refs/heads/master' && !endsWith(needs.build.outputs.version, '.Beta') }}
     permissions:
       contents: write
     steps:
