--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         java-version: ["8", "11", "17", "19"] # LTS + Latest
-        os: [ 'ubuntu-latest', 'macos-latest' ]
+        os: [ 'ubuntu-latest', 'macos-latest', 'windows-latest' ]
     name: Java ${{ matrix.java-version }} (${{ matrix.os }}) Tests
     steps:
       - uses: actions/checkout@v3
