--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -89,7 +89,7 @@ jobs:
           path: dist/*
   release:
     runs-on: ubuntu-latest
-    needs: [test, build]
+    needs: [build]
     if: ${{ github.ref == 'refs/heads/master' && !endsWith(needs.build.outputs.version, '.Beta') }}
     permissions:
       contents: write
