--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -89,8 +89,8 @@ jobs:
           path: dist/*
   release:
     runs-on: ubuntu-latest
-    needs: [build]
-    if: ${{ github.ref == 'refs/heads/master' && !endsWith(needs.build.outputs.version, '.Beta') }}
+    needs: build
+    #if: ${{ github.ref == 'refs/heads/master' && !endsWith(needs.build.outputs.version, '.Beta') }}
     permissions:
       contents: write
     steps:
